[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rprompt = "1.0"
anyhow = "1.0"
rayon = "1.5"
crossbeam = "0.8"
num = "0.4"
ordered-float = "2.8"
pathfinding = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
petgraph = "0.6"
itertools = "0.10"
once_cell = "1.8"