[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam = "0.8"
defaultmap = "0.5"
itertools = "0.10"
nalgebra = "0.29"
num = "0.4"
once_cell = "1.8"
ordered-float = "2.8"
pathfinding = "2.2"
petgraph = "0.6"
rayon = "1.5"
regex = "1.5"
rprompt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
